Refactor engine states to replace `ReadyState` with `WaitCmdPositionState`; update transitions, method implementations, and test cases accordingly.